# blink-c

./: .clang-format  .gitpod.Dockerfile  CMakeLists.txt  LICENSE  README.md  project-meta-info.in
.github/workflow/: develop.yml
app/: CMakeLists.txt  project-meta-info.in
app/include/blink/: version.h.in
app/include/waitui/: version.h.in
app/src/: main.c
cmake/: FetchCMocka.cmake
samples/: test.wai
tests/: CMakeLists.txt
